# MILETO_enhancingFAIRness

./: .gitignore  CITATION.cff  Dockerfile  LICENSE  NOTICE  README.md  app.py  cli.py  gui-app.py  gui.py  pyInstaller-requirements.txt  pyproject.toml  requirements.txt
LICENSES/: Apache_2_0_LICENSE.txt  BSD_2_Clause_LICENSE.txt  BSD_3_Clause_LICENSE.txt  CC0_1_0_Universal_LICENSE.txt  Common_Public_1_0_LICENSE.txt  GNU_LGPL_LICENSE.txt  HPND_LICENSE.txt  MIT_LICENSE.txt  PSF_2_0_LICENSE.txt
assets/: logo.icns
conf/: config.py  dc_api_request.json  dc_meta_terms copy.json  dc_meta_terms.json  metadata_properties.json  template_conf.json  template_datacite.json  view_config.py
data/: 2018_ErosionExperiment_Marganai_v2024.xlsx  2022_ExampleDataSet.xlsx  2022_ExampleDataSet_v2.xlsx  2022_ExampleDataSet_v2_1.xlsx  2024_ExampleDataSet.xlsx  2024_ExampleDataSet_with_errors.xlsx  ErosionExperiment_Marganai_v2024.xlsx  car_monitoring.xlsx  db_orders.xlsx  db_orders_no_metadata.xlsx
helpers/: autoDDict_Table.bas
hooks/: hook-MySQLdb.py  hook-psycopg2.py  hook-pysqlite2.py  hook-user32.py
hooks/windows_hooks/: hook-msvcrt.py
src/: utils.py
src/dbcreate/: dbcreate.py  erd_create.py  run.py
src/doccreate/: pdf_create.py  run.py
src/extraction/: check.py  create_metadata.py  retrieve_data.py  utils.py
src/gui/: controller.py  model.py  view.py
src/templates/: doc.css  doc.html
src/utils/: utils.py  utils_extraction.py  utils_gui.py  utils_pdf.py
tests/: test_check.py  test_dbcreate.py  test_extraction.py  test_retrieve.py
(+1 files in other folders)
