[build-system]
requires = ["poetry"] #? to check
build-backend = "poetry.build" #?

[tool.poetry]
name = "spreadsheets_to_sqlite"
version = "0.0.1"
requires-python = ">=3.9"
authors = ["Agathe Casalta-Badetti <a.casaltab@gmail.com>"]
description = "A project to convert spreadsheets into .sqlite files with PDF documentation"
readme = "README.md"
license = "LICENSE"
classifiers = [
    "Programing Language :: Python :: 3.9",
    # "License :: GPL", # creative common attribution, non comercial and share alike 
    "Operating System :: OS Independent",
]
packages = [
    { include = "dbcreate", from = "src"},
    { include = "extraction", from = "src"}
]

[tool.pytest.ini_options]
pythonpath = "src"